Migrate yocto override syntax: run poky script convert-overrides.py
Manually checked the results produced by poky/scripts/contrib/convert-overrides.py.

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -103,4 +103,4 @@ ALTERNATIVE_PRIORITY_procps[ps] = "100"
 SRC_URI:remove:pn-ca-certificates= "file://update-ca-certificates-support-Toybox.patch"
 
 # disable automatic start of swupdate.service
-SYSTEMD_SERVICE_swupdate:remove:pn-swupdate= "swupdate.service"
+SYSTEMD_SERVICE:swupdate:remove:pn-swupdate= "swupdate.service"
