--- a/kas/example/iot-client-template-rs.yaml
+++ b/kas/example/iot-client-template-rs.yaml
@@ -4,7 +4,7 @@ header:
   version: 11
 
 local_conf_header:
-  meta-ics-dm_example_iot_module-template-rs: |
+  meta-ics-dm_example_iot_client-template-rs: |
     CORE_IMAGE_EXTRA_INSTALL += "\
-    iot-module-template-rs \
+    iot-client-template-rs \
     "
