enforce identical busybox configuration for iot and iotedge

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -104,3 +104,6 @@ SRC_URI:remove:pn-ca-certificates= "file://update-ca-certificates-support-Toybox
 
 # disable automatic start of swupdate.service
 SYSTEMD_SERVICE:swupdate:remove:pn-swupdate= "swupdate.service"
+
+# enforce identical busybox configuration for iot and iotedge; non-busybox tools lspci, lsusb, ps, nsenter are used
+BBMASK:append = " ${@bb.utils.contains('DISTRO_FEATURES', 'iotedge', '/meta-virtualization/recipes-core/busybox/busybox_%.bbappend', '', d)}"
