--- a/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/adu-agent.service
+++ b/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/adu-agent.service
@@ -15,8 +15,10 @@ RestartSec=5
 User=adu
 Group=adu
 
-ExecStartPre=-/usr/bin/AducIotAgent -l 2 --update-type "microsoft/swupdate:1" -C /usr/lib/adu/extensions/libmicrosoft_swupdate_1.so
-ExecStartPre=-/usr/bin/AducIotAgent -l 2 --update-type "microsoft/update-manifest" -C /usr/lib/adu/extensions/libmicrosoft_steps_1.so
+ExecStartPre=-/usr/bin/AducIotAgent -l 2 --update-type "microsoft/script:1"             -C /usr/lib/adu/extensions/libmicrosoft_script_1.so
+ExecStartPre=-/usr/bin/AducIotAgent -l 2 --update-type "microsoft/steps:1"              -C /usr/lib/adu/extensions/libmicrosoft_steps_1.so
+ExecStartPre=-/usr/bin/AducIotAgent -l 2 --update-type "microsoft/swupdate:1"           -C /usr/lib/adu/extensions/libmicrosoft_swupdate_1.so
+ExecStartPre=-/usr/bin/AducIotAgent -l 2 --update-type "microsoft/update-manifest:4"    -C /usr/lib/adu/extensions/libmicrosoft_steps_1.so
 ExecStartPre=-/usr/bin/AducIotAgent -l 2 -D /usr/lib/adu/extensions/libdeliveryoptimization-content-downloader.so
 ExecStart=/usr/bin/AducIotAgent -l 0 -e
 
