kirkstone: use rust from by meta-openembedded/meta-oe

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -25,7 +25,7 @@ BBFILE_COLLECTIONS += "ics_dm"
 BBFILE_PATTERN_ics_dm = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ics_dm = "10"
 
-LAYERDEPENDS_ics_dm = "rust-layer swupdate"
+LAYERDEPENDS_ics_dm = "swupdate"
 LAYERSERIES_COMPAT_ics_dm = "dunfell kirkstone"
 LAYERDIR_ics_dm = "${LAYERDIR}"
 
