--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -1,9 +1,10 @@
 DISTRO = "ics-dm-os"
 DISTRO_NAME = "${DISTRO_NAME_PREFIX}ICS-DM-OS${DISTRO_NAME_SUFFIX}"
 DISTROOVERRIDES = "poky:ics-dm-os"
-# DISTRO_VERSION is POKY_VERSION (since we include poky conf before our own
-# distro settings) appended with a build number.
-DISTRO_VERSION:append = ".${ICS_DM_BUILD_NUMBER}"
+# DISTRO_VERSION is ICS_DM_VERSION (since we include poky conf before our own
+# distro settings) appended with <ICS_DM_BUILD_NUMBER>.
+DISTRO_VERSION_ORIG := "${DISTRO_VERSION}"
+DISTRO_VERSION = "${ICS_DM_VERSION}${ICS_DM_BUILD_NUMBER}"
 TARGET_VENDOR = "-icsdm"
 
 # Systemd
