- new changelog version schema - new attributes in /etc/os-release

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -111,3 +111,25 @@ SYSTEMD_SERVICE:swupdate:remove:pn-swupdate= "swupdate.service"
 
 # enforce identical busybox configuration for iot and iotedge; non-busybox tools lspci, lsusb, ps, nsenter are used
 BBMASK:append = " ${@bb.utils.contains('DISTRO_FEATURES', 'iotedge', '/meta-virtualization/recipes-core/busybox/busybox_%.bbappend', '', d)}"
+
+# define default devel tools to be included in image
+ICS_DM_DEVEL_TOOLS_DEFAULT = "\
+    curl \
+    ethtool \
+    gdbserver \
+    htop \
+    ldd \
+    lshw \
+    lsof \
+    ltrace \
+    mmc-utils \
+    parted \
+    screen \
+    smartmontools \
+    strace \
+    sysstat \
+    systemd-analyze \
+    tcpdump \
+    valgrind \
+    e2fsprogs e2fsprogs-tune2fs \
+"
