kirkstone: workaround kernel modules not loaded during boot #1054

--- a/conf/machine/raspberrypi4-64.extra.conf
+++ b/conf/machine/raspberrypi4-64.extra.conf
@@ -9,3 +9,11 @@ ENABLE_UART_raspberrypi4-64 = "1"
 
 # u-boot boot cmd config vars
 UBOOT_ARCH = "arm64"
+
+# kirkstone:
+#   - Linux kernel git://github.com/raspberrypi/linux.git switched using XZ compression for kernel modules  
+#   - kmod package has to support xz, too
+#   - otherwise modules.alias (/lib/modules/) is empty; automatic kernel module load broken
+#   - see https://github.com/agherzan/meta-raspberrypi/issues/1054
+PACKAGECONFIG:append:pn-kmod = " xz"
+PACKAGECONFIG:append:pn-kmod-native = " xz"
