--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -26,7 +26,7 @@ BBFILE_PATTERN_ics_dm = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ics_dm = "10"
 
 LAYERDEPENDS_ics_dm = "swupdate"
-LAYERSERIES_COMPAT_ics_dm = "dunfell kirkstone"
+LAYERSERIES_COMPAT_ics_dm = "kirkstone"
 LAYERDIR_ics_dm = "${LAYERDIR}"
 
 # orchestrate other layers (we ensure our layer is latest when building with kas)
