--- a/kas/distro/poky.yaml
+++ b/kas/distro/poky.yaml
@@ -8,7 +8,7 @@ distro: poky
 repos:
   ext/poky:
     url: "https://git.yoctoproject.org/git/poky"
-    refspec: 453be4d258f71855205f45599eea04589eb4a369
+    refspec: yocto-4.0.1
     layers:
       meta:
       meta-poky:
