--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -25,8 +25,8 @@ BBFILE_COLLECTIONS += "ics_dm"
 BBFILE_PATTERN_ics_dm = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ics_dm = "10"
 
-LAYERDEPENDS_ics_dm = "rust-layer swupdate"
-LAYERSERIES_COMPAT_ics_dm = "dunfell"
+LAYERDEPENDS_ics_dm = "swupdate"
+LAYERSERIES_COMPAT_ics_dm = "kirkstone"
 LAYERDIR_ics_dm = "${LAYERDIR}"
 
 # orchestrate other layers (we ensure our layer is latest when building with kas)
