wifi-comminssioning-gatt-service: fix startup behavior

--- a/recipes-ics-dm/wifi-commissioning-gatt-service/wifi-commissioning-gatt-service/wifi-commissioning-gatt@.service
+++ b/recipes-ics-dm/wifi-commissioning-gatt-service/wifi-commissioning-gatt-service/wifi-commissioning-gatt@.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=wifi-commissioning-gatt: commissioning wifi via bt
-Requires=wpa_supplicant@%i.service bluetooth.service
+Requires=wpa_supplicant@%i.service bluetooth.service bluetooth.target
 After=wpa_supplicant@%i.service bluetooth.service bluetooth.target
 
 [Service]
