- iotedge + iot-identity-service: update to stable 1.3.0 (breaking changes in cert renewal) - distro.conf: global setting 'RUST_PANIC_STRATEGY = "abort"' to compile iotedge 1.3.0 - kas: changed meta-rust dependency to fork with rust 1.61.0 - rust-bindgen: update to 0.60.1 - rust-cbindgen: update to 0.24.3 - demo-portal-module: removed edition patching - iot-client-template-rs: removed edition patching

--- a/conf/distro/ics-dm-os.conf
+++ b/conf/distro/ics-dm-os.conf
@@ -3,4 +3,5 @@ require conf/distro/poky.conf
 require conf/distro/include/ics-dm-os-distro.conf
 require conf/distro/include/ics-dm-os-preferred.conf
 require conf/distro/include/ics-dm-os-user_classes.conf
+require conf/distro/include/ics-dm-os-rust.conf
 require conf/distro/include/ics-dm-os-swupdate.conf
