--- a/conf/distro/include/ics-dm-os-preferred.conf
+++ b/conf/distro/include/ics-dm-os-preferred.conf
@@ -1,3 +1,5 @@
 PREFERRED_PROVIDER_u-boot-default-script ?= "u-boot-scr"
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "libubootenv"
 PREFERRED_PROVIDER_virtual/docker = "docker-moby"
+PREFERRED_VERSION_cargo = "1.58.1"
+PREFERRED_VERSION_rust = "1.58.1"
