--- a/conf/distro/include/ics-dm-os-swupdate.conf
+++ b/conf/distro/include/ics-dm-os-swupdate.conf
@@ -1,2 +1,5 @@
 SOFTWARE_VERSION = "${DISTRO_VERSION}"
 SOFTWARE_NAME = "${DISTRO_NAME}"
+
+# disable automatic start of swupdate.service
+SYSTEMD_SERVICE:swupdate:remove:pn-swupdate= "swupdate.service"
