--- a/kas/distro/ics-dm-os.yaml
+++ b/kas/distro/ics-dm-os.yaml
@@ -17,7 +17,7 @@ repos:
       meta-python:
   ext/meta-rust:
     url: "https://github.com/mlilien/meta-rust.git"
-    refspec: 1.61.0
+    refspec: 4b95d156a166550cdc96672cb680e56cc32e794a
   ext/meta-swupdate:
     url: "https://github.com/sbabic/meta-swupdate.git"
     refspec: 649f9d9e0ae64a5bb1f74f6d6edf678327d1dbf6
