--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -43,6 +43,9 @@ ICS_DM_PART_SIZE_CERT ?= "40960"
 ICS_DM_PART_SIZE_ETC ?= "40960"
 ICS_DM_PART_SIZE_DATA ?= "524288"
 
+# setup OOM behaviour
+ICS_DM_VM_PANIC_ON_OOM ?= "0"
+
 # enable variable expansion in wks includes
 WICVARS:append = " ICS_DM_PART_SIZE_BOOT"
 WICVARS:append = " ICS_DM_PART_SIZE_UBOOT_ENV"
