enabled compatibility with meta-rust (iot-identity-service and iotedge 1.3.0 depend on rust 1.61.0)
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/ics-dm-os-rust.conf
+++ b/conf/distro/include/ics-dm-os-rust.conf
@@ -4,3 +4,8 @@ EXTRA_OECMAKE:append:pn-rust-llvm-native = " -DLLVM_ENABLE_PROJECTS=clang"
 # set default rust panic strategy to abort, otherwise we have to patch iotedge
 # warning: this is global setting
 RUST_PANIC_STRATEGY = "abort"
+
+# mask pokys rust. we need rust 1.61.0 from meta-rust.
+BBMASK .= " /poky/meta/recipes-devtools/rust/ "
+BBMASK .= " /poky/meta/recipes-devtools/cargo/ "
+RUSTVERSION = "1.61%"
