--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -43,6 +43,9 @@ ICS_DM_PART_SIZE_CERT ?= "40960"
 ICS_DM_PART_SIZE_ETC ?= "40960"
 ICS_DM_PART_SIZE_DATA ?= "524288"
 
+# setup OOM behaviour
+ICS_DM_VM_PANIC_ON_OOM ?= "0"
+
 # enable variable expansion in wks includes
 WICVARS:append = " ICS_DM_PART_SIZE_BOOT"
 WICVARS:append = " ICS_DM_PART_SIZE_UBOOT_ENV"
@@ -89,9 +92,6 @@ ALTERNATIVE_PRIORITY_procps[ps] = "100"
 # update-ca-certificates is not working when we include the following patch
 # which poky applies
 SRC_URI:remove:pn-ca-certificates= "file://update-ca-certificates-support-Toybox.patch"
-
-# disable automatic start of swupdate.service
-SYSTEMD_SERVICE:swupdate:remove:pn-swupdate= "swupdate.service"
 
 # enforce identical busybox configuration for iot and iotedge; non-busybox tools lspci, lsusb, ps, nsenter are used
 BBMASK:append = " ${@bb.utils.contains('DISTRO_FEATURES', 'iotedge', '/meta-virtualization/recipes-core/busybox/busybox_%.bbappend', '', d)}"
