enable offline builds for ics-dm rust modules which have dependencies to git   repositories via ssh
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/ics-dm-os-rust.conf
+++ b/conf/distro/include/ics-dm-os-rust.conf
@@ -2,5 +2,12 @@
 EXTRA_OECMAKE:append:pn-rust-llvm-native = " -DLLVM_ENABLE_PROJECTS=clang"
 
 # set default rust panic strategy to abort, otherwise we have to patch iotedge
-# warning: this is global setting
+# warning: this is a global setting
 RUST_PANIC_STRATEGY = "abort"
+
+# enforce cargo offline builds
+# - this setting is mainly for yocto branches < kirkstone
+# - in kirkstone the network access is restricted in do_configure and
+#   do_compile steps anyway
+# warning: this is a global setting
+CARGO_NET_OFFLINE = "true"
