- phygate tauri-l: removed features from `MACHINE_FEATURES` the hardware doesn't provide per se - systemd-networkd-wait-online.service: only add interface `ICS_DM_WLAN0` if   `MACHINE_FEATURES` includes `wifi`
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -1,14 +1,17 @@
 require conf/machine/include/phytec-imx8mm.inc
 
+# remove machine features the hardware doesn't provide per se
+MACHINE_FEATURES:remove = "3g alsa bluetooth touchscreen wifi"
+
 # TODO
-# we do not fit in IMAGE_ROOTFS_MAXSIZE per se. we have to tune the overhead 
+# we do not fit in IMAGE_ROOTFS_MAXSIZE per se. we have to tune the overhead
 # factor of the readonly rootfs.
 # - alternative would be to change IMAGE_ROOTFS_MAXSIZE
 #
-# i doubt the current DISTRO_FEATURES/MACHINE_FEATURES are meaningful for the 
-# device. if it is realy only a headless gateway we can remove features like 
+# i doubt the current DISTRO_FEATURES/MACHINE_FEATURES are meaningful for the
+# device. if it is realy only a headless gateway we can remove features like
 # e.g. alsa, wayland, opengl, pulseaudio, x11...
-# since wifi + bluetooth seem to be optional for oems, that can have an 
+# since wifi + bluetooth seem to be optional for oems, that can have an
 # influence how to configure DISTRO_FEATURES/MACHINE_FEATURES as well.
 #
 # current settings when building ics-dm-os-iotedge with tpm+enrollment:
@@ -16,7 +19,7 @@ require conf/machine/include/phytec-imx8mm.inc
 # DISTRO_FEATURES_BACKFILL="pulseaudio sysvinit gobject-introspection-data ldconfig"
 # DISTRO_FEATURES_BACKFILL_CONSIDERED=" sysvinit"
 # DISTRO_FEATURES_DEFAULT="acl alsa argp bluetooth debuginfod ext2 ipv4 ipv6 largefile pcmcia usbgadget usbhost wifi xattr nfs zeroconf pci 3g nfc x11 vfat seccomp"
-# MACHINE_FEATURES="usbgadget usbhost vfat alsa touchscreen  caam  emmc pci wifi bluetooth can tpm2 3g  tpm2 rtc qemu-usermode"
+# MACHINE_FEATURES="usbgadget usbhost vfat caam emmc pci can tpm2 rtc qemu-usermode"
 # MACHINE_FEATURES_BACKFILL="rtc qemu-usermode"
 # MACHINE_FEATURES_IMX_REMOVALS="mrvl8997"
 IMAGE_OVERHEAD_FACTOR = "1.1"
