--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -1,28 +1,27 @@
 require conf/machine/include/phytec-imx8mm.inc
 
 # remove machine features the hardware doesn't provide per se
-MACHINE_FEATURES:remove = "3g alsa bluetooth touchscreen wifi"
+MACHINE_FEATURES:remove = " \
+    3g \
+    alsa \
+    bluetooth \
+    touchscreen \
+    wifi \
+"
 
-# TODO
-# we do not fit in IMAGE_ROOTFS_MAXSIZE per se. we have to tune the overhead
-# factor of the readonly rootfs.
-# - alternative would be to change IMAGE_ROOTFS_MAXSIZE
-#
-# i doubt the current DISTRO_FEATURES/MACHINE_FEATURES are meaningful for the
-# device. if it is realy only a headless gateway we can remove features like
-# e.g. alsa, wayland, opengl, pulseaudio, x11...
-# since wifi + bluetooth seem to be optional for oems, that can have an
-# influence how to configure DISTRO_FEATURES/MACHINE_FEATURES as well.
-#
-# current settings when building ics-dm-os-iotedge with tpm+enrollment:
-# DISTRO_FEATURES="acl alsa argp bluetooth debuginfod ext2 ipv4 ipv6 largefile pcmcia usbgadget usbhost wifi xattr nfs zeroconf pci 3g nfc x11 vfat seccomp largefile opengl ptest multiarch wayland vulkan enrollment wifi-commissioning initramfs-flash-mode iotedge persistent-var-log resize-data systemd virtualization pulseaudio gobject-introspection-data ldconfig"
-# DISTRO_FEATURES_BACKFILL="pulseaudio sysvinit gobject-introspection-data ldconfig"
-# DISTRO_FEATURES_BACKFILL_CONSIDERED=" sysvinit"
-# DISTRO_FEATURES_DEFAULT="acl alsa argp bluetooth debuginfod ext2 ipv4 ipv6 largefile pcmcia usbgadget usbhost wifi xattr nfs zeroconf pci 3g nfc x11 vfat seccomp"
-# MACHINE_FEATURES="usbgadget usbhost vfat caam emmc pci can tpm2 rtc qemu-usermode"
-# MACHINE_FEATURES_BACKFILL="rtc qemu-usermode"
-# MACHINE_FEATURES_IMX_REMOVALS="mrvl8997"
-IMAGE_OVERHEAD_FACTOR = "1.1"
+# remove distro features we don't support
+DISTRO_FEATURES:remove = " \
+    3g \
+    alsa \
+    bluetooth \
+    nfc \
+    opengl \
+    pulseaudio \
+    x11 \
+    vulkan \
+    wayland \
+    wifi \
+"
 
 # rm dtbos from boot partition (we install them in root)
 IMAGE_BOOT_FILES:remove:pn-ics-dm-os-image = " \
