- kas: removed dependency to meta-rust - added rust 1.62.1 - iot-identity-service/iotedge: updated to 1.4.0
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/ics-dm-os-rust.conf
+++ b/conf/distro/include/ics-dm-os-rust.conf
@@ -5,12 +5,8 @@ EXTRA_OECMAKE:append:pn-rust-llvm-native = " -DLLVM_ENABLE_PROJECTS=clang"
 # warning: this is global setting
 RUST_PANIC_STRATEGY = "abort"
 
-# mask pokys rust. we need rust 1.61.0 from meta-rust.
-BBMASK .= " /poky/meta/recipes-devtools/rust/ "
-BBMASK .= " /poky/meta/recipes-devtools/cargo/ "
-RUSTVERSION = "1.61%"
-# warning: this is a global setting
-RUST_PANIC_STRATEGY = "abort"
+# we need rust 1.62.x from meta-ics-dm
+RUSTVERSION = "1.62%"
 
 # enforce cargo offline builds
 # - this setting is mainly for yocto branches < kirkstone
