--- a/kas/feature/tpm.yaml
+++ b/kas/feature/tpm.yaml
@@ -1,8 +1,12 @@
 # kas config file
 
 header:
-  version: 10
+  version: 11
 
 local_conf_header:
   meta-ics-dm_feature_tpm: |
+    DISTRO_FEATURES:append = " tpm2"
     MACHINE_FEATURES:append = " tpm2"
+
+    EXTRA_OECONF:append:pn-tpm2-tss = " --disable-weakcrypto --enable-debug=info"
+    ICS_DM_DEVEL_TOOLS_DEFAULT:append = " tpm2-tools"
