Run ics-dm-first-boot.service before first-boot-complete.target

--- a/recipes-core/systemd/systemd/ics-dm-first-boot.service
+++ b/recipes-core/systemd/systemd/ics-dm-first-boot.service
@@ -1,5 +1,7 @@
 [Unit]
-Description=first boot
+Description=ics-dm first boot
+Before=first-boot-complete.target
+Wants=first-boot-complete.target
 ConditionFirstBoot=yes
 
 # CAUTION!!!
