phygate tauri-l: fixed systemd-networkd-wait-online.service
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -39,8 +39,7 @@ KERNEL_DEVICETREE_FN = "imx8mm-phygate-tauri.dtb"
 
 # ethernet device name
 ICS_DM_ETH0 = "eth0"
-#ICS_DM_ETH1 ?
-#ICS_DM_WLAN0 ?
+ICS_DM_ETH1 = "enp1s0"
 
 # TODO clarify with upstream
 # this is not set in meta-phytec, copied it from meta-phytec polis config
