--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,10 +10,6 @@ BBFILES += "\
 "
 
 BBFILES_DYNAMIC += "\
-    freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/recipes-*/*/*.bb \
-    freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/recipes-*/*/*.bbappend \
-    phytec:${LAYERDIR}/dynamic-layers/phytec/recipes-*/*/*.bb \
-    phytec:${LAYERDIR}/dynamic-layers/phytec/recipes-*/*/*.bbappend \
     raspberrypi:${LAYERDIR}/dynamic-layers/raspberrypi/recipes-*/*/*.bb \
     raspberrypi:${LAYERDIR}/dynamic-layers/raspberrypi/recipes-*/*/*.bbappend \
     virtualization-layer:${LAYERDIR}/dynamic-layers/virtualization/recipes-*/*/*.bb \
@@ -30,6 +26,4 @@ LAYERSERIES_COMPAT_ics_dm = "dunfell"
 LAYERDIR_ics_dm = "${LAYERDIR}"
 
 # orchestrate other layers (we ensure our layer is latest when building with kas)
-# if you don't use kas, you should ensure meta-ics-dm is behind meta-phytec in BBLAYERS.
-BBFILE_PRIORITY_phytec = "9"
-BBFILE_PRIORITY_raspberrypi="9"
+# e.g. BBFILE_PRIORITY_raspberrypi="9"
