--- a/kas/feature/remote-features-module.yaml
+++ b/kas/feature/remote-features-module.yaml
@@ -5,4 +5,6 @@ header:
 
 local_conf_header:
   meta-ics-dm_feature_remote-features-module: |
-    DISTRO_FEATURES:append = " remote-features-module"
+    CORE_IMAGE_EXTRA_INSTALL += "\
+    remote-features-module \
+    "
