rename and update demo-portal-module (#158)
- demo-portal-module:
  - renamed to icsdm-device-service
  - added direct method "reboot"
  - merged existing demo-portal and factory_reset user to icsdm_device_service user
  - kas: moved from example to default feature
- iot-client-template-rs: bumped to 0.4.9
- factory-reset: fixed bug when setting reset type '0'

--- a/kas/feature/icsdm-device-service.yaml
+++ b/kas/feature/icsdm-device-service.yaml
@@ -4,7 +4,7 @@ header:
   version: 11
 
 local_conf_header:
-  meta-ics-dm_example_demo-portal-module: |
+  meta-ics-dm_feature_icsdm-device-service: |
     CORE_IMAGE_EXTRA_INSTALL += "\
-    demo-portal-module \
+    icsdm-device-service \
     "
