iot-hub-device-update: explicitly create /var/lib/adu/downloads via systemd-tmpfiles

--- a/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/iot-hub-device-update.conf
+++ b/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/iot-hub-device-update.conf
@@ -1,4 +1,5 @@
 d /var/lib/adu 0770 adu adu -
+d /var/lib/adu/downloads 0770 adu adu -
 Z /var/lib/adu 0770 adu adu -
 d /var/log/aduc-logs 1755 adu adu -
 Z /etc/adu 0755 adu adu -
