systemd: enabled bash-completion
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -89,6 +89,9 @@ ALTERNATIVE_PRIORITY_coreutils[dd] = "100"
 ALTERNATIVE_PRIORITY_coreutils[cp] = "100"
 ALTERNATIVE_PRIORITY_procps[ps] = "100"
 
+# enable sourcing /etc/bashrc so non-loginshells can use bash-completion
+CFLAGS:append:pn-bash = " -DSYS_BASHRC='"/etc/bashrc"'"
+
 # update-ca-certificates is not working when we include the following patch
 # which poky applies
 SRC_URI:remove:pn-ca-certificates= "file://update-ca-certificates-support-Toybox.patch"
