--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -19,7 +19,7 @@ JOURNALD_SystemMaxUse ?= "128M"
 PACKAGE_CLASSES ?= "package_ipk"
 
 # Check if Buildsystem can reach remote sources
-CONNECTIVITY_CHECK_URIS ?= "https://github.com/ICS-DeviceManagement "
+CONNECTIVITY_CHECK_URIS ?= "https://github.com/omnect "
 
 # Image configuration
 IMAGE_FSTYPES = "ext4.gz wic.xz wic.bmap"
