busybox: disabled build of syslogd klogd when using systemd
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -89,6 +89,10 @@ ALTERNATIVE_PRIORITY_coreutils[dd] = "100"
 ALTERNATIVE_PRIORITY_coreutils[cp] = "100"
 ALTERNATIVE_PRIORITY_procps[ps] = "100"
 
+# disable busybox syslog+klog when using systemd
+FILESEXTRAPATHS:prepend:pn-busybox := "${LAYERDIR_ics_dm}/files:"
+SRC_URI:append:pn-busybox = "${@bb.utils.contains('DISTRO_FEATURES', 'systemd', ' file://busybox_systemd_disable_syslog_klog.cfg','', d)}"
+
 # update-ca-certificates is not working when we include the following patch
 # which poky applies
 SRC_URI:remove:pn-ca-certificates= "file://update-ca-certificates-support-Toybox.patch"
