renamed distro from ICS-DM-OS to omnect

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -1,5 +1,5 @@
 DISTRO = "ics-dm-os"
-DISTRO_NAME = "${DISTRO_NAME_PREFIX}ICS-DM-OS${DISTRO_NAME_SUFFIX}"
+DISTRO_NAME = "${DISTRO_NAME_PREFIX}omnect${DISTRO_NAME_SUFFIX}"
 DISTROOVERRIDES = "poky:ics-dm-os"
 # DISTRO_VERSION is POKY_VERSION (since we include poky conf before our own
 # distro settings) appended with a build number.
