renamed to meta-ics-dm to meta-omnect

--- a/conf/distro/include/ics-dm-os-rust.conf
+++ b/conf/distro/include/ics-dm-os-rust.conf
@@ -5,7 +5,7 @@ EXTRA_OECMAKE:append:pn-rust-llvm-native = " -DLLVM_ENABLE_PROJECTS=clang"
 # warning: this is global setting
 RUST_PANIC_STRATEGY = "abort"
 
-# we need rust 1.62.x from meta-ics-dm
+# we need rust 1.62.x from meta-omnect
 RUSTVERSION = "1.62%"
 
 # enforce cargo offline builds
