--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -30,6 +30,6 @@ LAYERSERIES_COMPAT_ics_dm = "kirkstone"
 LAYERDIR_ics_dm = "${LAYERDIR}"
 
 # orchestrate other layers (we ensure our layer is latest when building with kas)
-# if you don't use kas, you should ensure meta-ics-dm is behind meta-phytec in BBLAYERS.
+# if you don't use kas, you should ensure meta-omnect is behind meta-phytec in BBLAYERS.
 BBFILE_PRIORITY_phytec = "9"
 BBFILE_PRIORITY_raspberrypi="9"
