--- a/kas/feature/tpm.yaml
+++ b/kas/feature/tpm.yaml
@@ -4,7 +4,7 @@ header:
   version: 11
 
 local_conf_header:
-  meta-ics-dm_feature_tpm: |
+  meta-omnect_feature_tpm: |
     DISTRO_FEATURES:append = " tpm2"
     MACHINE_FEATURES:append = " tpm2"
 
