renamed ics-dm-os to omnect-os

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -1,6 +1,6 @@
-DISTRO = "ics-dm-os"
+DISTRO = "omnect-os"
 DISTRO_NAME = "${DISTRO_NAME_PREFIX}OMNECT${DISTRO_NAME_SUFFIX}"
-DISTROOVERRIDES = "poky:ics-dm-os"
+DISTROOVERRIDES = "poky:omnect-os"
 # DISTRO_VERSION is POKY_VERSION (since we include poky conf before our own
 # distro settings) appended with a build number.
 DISTRO_VERSION:append = ".${ICS_DM_BUILD_NUMBER}"
@@ -34,7 +34,7 @@ SRC_URI:remove:pn-busybox = "file://syslog.cfg"
 # define partition (default) sizes in KiB
 #     Note, the last data partition will be expanded during the first boot after image flashing inside the INITRAMFS.
 #     This means, ICS_DM_PART_SIZE_DATA is the initial value.
-#     Note, when using kas/feature/ics-dm-os-common.yaml the values configured there will override values here.
+#     Note, when using kas/feature/omnect-os-common.yaml the values configured there will override values here.
 ICS_DM_PART_SIZE_BOOT ?= "40960"
 ICS_DM_PART_SIZE_UBOOT_ENV ?= "64"
 ICS_DM_PART_SIZE_ROOTFS ?= "760832"
