--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -1,14 +1,14 @@
 require conf/machine/include/phytec-imx8mm.inc
 
 # since we do install a lot of dev packages in ICS_DM_DEVEL_TOOLS_DEFAULT
-# and do not fit in IMAGE_ROOTFS_MAXSIZE, we have to tune the overhead factor 
+# and do not fit in IMAGE_ROOTFS_MAXSIZE, we have to tune the overhead factor
 # of the readonly rootfs.
 # - applies to kirkstone but not e.g. dunfell
 # - alternative would be to change IMAGE_ROOTFS_MAXSIZE
 IMAGE_OVERHEAD_FACTOR = "1.1"
 
 # rm dtbos from boot partition (we install them in root)
-IMAGE_BOOT_FILES:remove:pn-ics-dm-os-image = " \
+IMAGE_BOOT_FILES:remove:pn-omnect-os-image = " \
     imx8mm-phyboard-polis-1532.1.dtbo \
     imx8mm-phyboard-polis-peb-eval-01.dtbo \
     imx8mm-phyboard-polis-peb-av-010.dtbo \
