--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -24,7 +24,7 @@ DISTRO_FEATURES:remove = " \
 "
 
 # rm dtbos from boot partition (we install them in root)
-IMAGE_BOOT_FILES:remove:pn-ics-dm-os-image = " \
+IMAGE_BOOT_FILES:remove:pn-omnect-os-image = " \
     imx8mm-phygate-tauri-rs232-rs232.dtbo \
     imx8mm-phygate-tauri-rs232-rs485.dtbo \
     imx8mm-phygate-tauri-rs232-rs485-switchable.dtbo \
