- renamed to omnect:   - renamed all occurrences of ics in files   - renamed all occurrences of ics in filenames

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -21,13 +21,13 @@ BBFILES_DYNAMIC += "\
     virtualization-layer:${LAYERDIR}/dynamic-layers/virtualization/recipes-*/*/*/*.bb \
     virtualization-layer:${LAYERDIR}/dynamic-layers/virtualization/recipes-*/*/*/*.bbappend \
 "
-BBFILE_COLLECTIONS += "ics_dm"
-BBFILE_PATTERN_ics_dm = "^${LAYERDIR}/"
-BBFILE_PRIORITY_ics_dm = "10"
+BBFILE_COLLECTIONS += "omnect"
+BBFILE_PATTERN_omnect = "^${LAYERDIR}/"
+BBFILE_PRIORITY_omnect = "10"
 
-LAYERDEPENDS_ics_dm = "swupdate"
-LAYERSERIES_COMPAT_ics_dm = "kirkstone"
-LAYERDIR_ics_dm = "${LAYERDIR}"
+LAYERDEPENDS_omnect = "swupdate"
+LAYERSERIES_COMPAT_omnect = "kirkstone"
+LAYERDIR_omnect = "${LAYERDIR}"
 
 # orchestrate other layers (we ensure our layer is latest when building with kas)
 # if you don't use kas, you should ensure meta-omnect is behind meta-phytec in BBLAYERS.
