--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -1,6 +1,6 @@
 require conf/machine/include/phytec-imx8mm.inc
 
-# since we do install a lot of dev packages in ICS_DM_DEVEL_TOOLS_DEFAULT
+# since we do install a lot of dev packages in OMNECT_DEVEL_TOOLS_DEFAULT
 # and do not fit in IMAGE_ROOTFS_MAXSIZE, we have to tune the overhead factor
 # of the readonly rootfs.
 # - applies to kirkstone but not e.g. dunfell
@@ -31,7 +31,7 @@ MACHINE_FIRMWARE:append = "lwb-etsi-firmware"
 
 
 # ethernet device name
-ICS_DM_ETH0 = "eth0"
+OMNECT_ETH0 = "eth0"
 
 # wlan device name
-ICS_DM_WLAN0 = "wlan0"
+OMNECT_WLAN0 = "wlan0"
