--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -3,8 +3,8 @@ DISTRO_NAME = "${DISTRO_NAME_PREFIX}OMNECT${DISTRO_NAME_SUFFIX}"
 DISTROOVERRIDES = "poky:omnect-os"
 # DISTRO_VERSION is POKY_VERSION (since we include poky conf before our own
 # distro settings) appended with a build number.
-DISTRO_VERSION:append = ".${ICS_DM_BUILD_NUMBER}"
-TARGET_VENDOR = "-icsdm"
+DISTRO_VERSION:append = ".${OMNECT_BUILD_NUMBER}"
+TARGET_VENDOR = "-omnect"
 
 # Systemd
 INIT_MANAGER ?= "systemd"
@@ -33,52 +33,52 @@ SRC_URI:remove:pn-busybox = "file://syslog.cfg"
 
 # define partition (default) sizes in KiB
 #     Note, the last data partition will be expanded during the first boot after image flashing inside the INITRAMFS.
-#     This means, ICS_DM_PART_SIZE_DATA is the initial value.
+#     This means, OMNECT_PART_SIZE_DATA is the initial value.
 #     Note, when using kas/feature/omnect-os-common.yaml the values configured there will override values here.
-ICS_DM_PART_SIZE_BOOT ?= "40960"
-ICS_DM_PART_SIZE_UBOOT_ENV ?= "64"
-ICS_DM_PART_SIZE_ROOTFS ?= "760832"
-ICS_DM_PART_SIZE_FACTORY ?= "40960"
-ICS_DM_PART_SIZE_CERT ?= "40960"
-ICS_DM_PART_SIZE_ETC ?= "40960"
-ICS_DM_PART_SIZE_DATA ?= "524288"
+OMNECT_PART_SIZE_BOOT ?= "40960"
+OMNECT_PART_SIZE_UBOOT_ENV ?= "64"
+OMNECT_PART_SIZE_ROOTFS ?= "760832"
+OMNECT_PART_SIZE_FACTORY ?= "40960"
+OMNECT_PART_SIZE_CERT ?= "40960"
+OMNECT_PART_SIZE_ETC ?= "40960"
+OMNECT_PART_SIZE_DATA ?= "524288"
 
 # setup OOM behaviour
-ICS_DM_VM_PANIC_ON_OOM ?= "0"
+OMNECT_VM_PANIC_ON_OOM ?= "0"
 
 # enable variable expansion in wks includes
-WICVARS:append = " ICS_DM_PART_SIZE_BOOT"
-WICVARS:append = " ICS_DM_PART_SIZE_UBOOT_ENV"
-WICVARS:append = " ICS_DM_PART_SIZE_ROOTFS"
-WICVARS:append = " ICS_DM_PART_SIZE_FACTORY"
-WICVARS:append = " ICS_DM_PART_SIZE_CERT"
-WICVARS:append = " ICS_DM_PART_SIZE_ETC"
-WICVARS:append = " ICS_DM_PART_SIZE_DATA"
+WICVARS:append = " OMNECT_PART_SIZE_BOOT"
+WICVARS:append = " OMNECT_PART_SIZE_UBOOT_ENV"
+WICVARS:append = " OMNECT_PART_SIZE_ROOTFS"
+WICVARS:append = " OMNECT_PART_SIZE_FACTORY"
+WICVARS:append = " OMNECT_PART_SIZE_CERT"
+WICVARS:append = " OMNECT_PART_SIZE_ETC"
+WICVARS:append = " OMNECT_PART_SIZE_DATA"
 
 # location of u-boot environment areas in KiB
 #   - Fixed addresses are used (--offset in WKS file), suitable for u-boot configuration.
-#   - It has to be aligned with the boot partition (ICS_DM_PART_SIZE_BOOT) and the MBR/GPT.
+#   - It has to be aligned with the boot partition (OMNECT_PART_SIZE_BOOT) and the MBR/GPT.
 #   - Wic aborts the build, in the case the partitions cannot be located at the fixed location.
 #   - The partitions will be initialized with 0xff (--source in WKS file). In this way, u-boot is able
 #     to create the default environment during the first boot after flashing the SD-Card image.
 #   - No entries inside the partition table will be created (--no-table in WKS file).
-#   - The variable ICS_DM_PART_SPARE1 is used to define a gap behind the boot partition.
-#   - The variable ICS_DM_PART_SPARE2 is used to define a gap between both environment partitions.
+#   - The variable OMNECT_PART_SPARE1 is used to define a gap behind the boot partition.
+#   - The variable OMNECT_PART_SPARE2 is used to define a gap between both environment partitions.
 #     In this way, the environment partitions can be located in different erase blocks.
-ICS_DM_PART_SPARE1 = "8192"
-ICS_DM_PART_SPARE2 = "1984"
-ICS_DM_PART_OFFSET_UBOOT_ENV1 ?= "${@int(d.getVar('ICS_DM_PART_SIZE_BOOT')) + \
-                                    int(d.getVar('ICS_DM_PART_SPARE1'))}"
-ICS_DM_PART_OFFSET_UBOOT_ENV2 ?= "${@int(d.getVar('ICS_DM_PART_OFFSET_UBOOT_ENV1')) + \
-                                    int(d.getVar('ICS_DM_PART_SIZE_UBOOT_ENV')) + \
-                                    int(d.getVar('ICS_DM_PART_SPARE2'))}"
+OMNECT_PART_SPARE1 = "8192"
+OMNECT_PART_SPARE2 = "1984"
+OMNECT_PART_OFFSET_UBOOT_ENV1 ?= "${@int(d.getVar('OMNECT_PART_SIZE_BOOT')) + \
+                                    int(d.getVar('OMNECT_PART_SPARE1'))}"
+OMNECT_PART_OFFSET_UBOOT_ENV2 ?= "${@int(d.getVar('OMNECT_PART_OFFSET_UBOOT_ENV1')) + \
+                                    int(d.getVar('OMNECT_PART_SIZE_UBOOT_ENV')) + \
+                                    int(d.getVar('OMNECT_PART_SPARE2'))}"
 
 # limit max rootfs size
-IMAGE_ROOTFS_MAXSIZE = "${ICS_DM_PART_SIZE_ROOTFS}"
+IMAGE_ROOTFS_MAXSIZE = "${OMNECT_PART_SIZE_ROOTFS}"
 
 # initramfs
-ICS_DM_INITRAMFS_FSTYPE = "cpio.gz.u-boot"
-ICS_DM_INITRAMFS_IMAGE_NAME = "${DISTRO_NAME}_${DISTRO_VERSION}_${MACHINE}-initramfs"
+OMNECT_INITRAMFS_FSTYPE = "cpio.gz.u-boot"
+OMNECT_INITRAMFS_IMAGE_NAME = "${DISTRO_NAME}_${DISTRO_VERSION}_${MACHINE}-initramfs"
 
 # lower alternative default priority
 ALTERNATIVE_PRIORITY_coreutils = "30"
@@ -100,7 +100,7 @@ SRC_URI:remove:pn-ca-certificates= "file://update-ca-certificates-support-Toybox
 BBMASK:append = " ${@bb.utils.contains('DISTRO_FEATURES', 'iotedge', '/meta-virtualization/recipes-core/busybox/busybox_%.bbappend', '', d)}"
 
 # define default devel tools to be included in image
-ICS_DM_DEVEL_TOOLS_DEFAULT = "\
+OMNECT_DEVEL_TOOLS_DEFAULT = "\
     curl \
     ethtool \
     gdbserver \
