--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -38,8 +38,8 @@ IMAGE_BOOT_FILES:remove:pn-omnect-os-image = " \
 KERNEL_DEVICETREE_FN = "imx8mm-phygate-tauri.dtb"
 
 # ethernet device name
-ICS_DM_ETH0 = "eth0"
-ICS_DM_ETH1 = "enp1s0"
+OMNECT_ETH0 = "eth0"
+OMNECT_ETH1 = "enp1s0"
 
 # TODO clarify with upstream
 # this is not set in meta-phytec, copied it from meta-phytec polis config
