--- a/wic/omnect-os.rpi.wks.in
+++ b/wic/omnect-os.rpi.wks.in
@@ -1,5 +1,5 @@
-part --fixed-size ${ICS_DM_PART_SIZE_BOOT}K      --fstype=vfat --align 4096 --label boot   --source bootimg-partition --active
-part --fixed-size ${ICS_DM_PART_SIZE_UBOOT_ENV}K --no-table --offset ${ICS_DM_PART_OFFSET_UBOOT_ENV1} --source rawcopy --sourceparams="file=ics-dm_uboot_env_ff.img"
-part --fixed-size ${ICS_DM_PART_SIZE_UBOOT_ENV}K --no-table --offset ${ICS_DM_PART_OFFSET_UBOOT_ENV2} --source rawcopy --sourceparams="file=ics-dm_uboot_env_ff.img"
+part --fixed-size ${OMNECT_PART_SIZE_BOOT}K      --fstype=vfat --align 4096 --label boot   --source bootimg-partition --active
+part --fixed-size ${OMNECT_PART_SIZE_UBOOT_ENV}K --no-table --offset ${OMNECT_PART_OFFSET_UBOOT_ENV1} --source rawcopy --sourceparams="file=omnect_uboot_env_ff.img"
+part --fixed-size ${OMNECT_PART_SIZE_UBOOT_ENV}K --no-table --offset ${OMNECT_PART_OFFSET_UBOOT_ENV2} --source rawcopy --sourceparams="file=omnect_uboot_env_ff.img"
 
 include omnect-os.common.wks.inc
