--- a/conf/distro/omnect-os.conf
+++ b/conf/distro/omnect-os.conf
@@ -3,5 +3,6 @@ require conf/distro/poky.conf
 require conf/distro/include/omnect-os-distro.conf
 require conf/distro/include/omnect-os-preferred.conf
 require conf/distro/include/omnect-os-user_classes.conf
+require conf/distro/include/omnect-os-kernel.conf
 require conf/distro/include/omnect-os-rust.conf
 require conf/distro/include/omnect-os-swupdate.conf
