fixed busybox build
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -92,11 +92,12 @@ CFLAGS:append:pn-bash = " -DSYS_BASHRC='"/etc/bashrc"'"
 # enable poweroff for busybox for flash-mode 2
 # disable busybox syslog+klog when using systemd
 FILESEXTRAPATHS:prepend:pn-busybox := "${LAYERDIR_omnect}/files:"
-SRC_URI:remove:pn-busybox = "filef://syslog.cfg"
+SRC_URI:remove:pn-busybox = "file://syslog.cfg"
 SRC_URI:append:pn-busybox = " \
     file://busybox-enable-poweroff.cfg \
     ${@bb.utils.contains('DISTRO_FEATURES', 'systemd', ' file://busybox-systemd-disable-syslog-klog.cfg','', d)} \
 "
+SYSTEMD_SERVICE:remove:pn-busybox-syslog = "file://busybox-syslog.service"
 
 # update-ca-certificates is not working when we include the following patch
 # which poky applies
