--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -10,6 +10,8 @@ OMNECT_KERNEL_SRC_URI = " \
 # enforce identical kernel config independent of meta-virtualization
 BBMASK:append = " meta-virtualization/recipes-kernel/linux/linux-%.bbappend"
 FILESEXTRAPATHS:prepend:pn-linux-imx := "${LAYERDIR_omnect}/recipes-kernel/linux/files:"
+FILESEXTRAPATHS:prepend:pn-linux-raspberrypi := "${LAYERDIR_omnect}/recipes-kernel/linux/files:"
 FILESEXTRAPATHS:prepend:pn-linux-yocto := "${LAYERDIR_omnect}/recipes-kernel/linux/files:"
 SRC_URI:append:pn-linux-imx = " ${OMNECT_KERNEL_SRC_URI}"
+SRC_URI:append:pn-linux-raspberrypi = " ${OMNECT_KERNEL_SRC_URI}"
 SRC_URI:append:pn-linux-yocto = " ${OMNECT_KERNEL_SRC_URI}"
