updated deviceupdate-agent to 1.0.0

--- a/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/du-config.json
+++ b/recipes-azure-iot/iot-hub-device-update/iot-hub-device-update/du-config.json
@@ -4,6 +4,8 @@
       "adu",
       "do"
     ],
+    "iotHubProtocol": "mqtt",
+    "compatPropertyNames":"manufacturer,model",
     "manufacturer": "",
     "model": "",
     "agents": [
