- search path fixes for files included by meta-phytec - polis: mask imx-gpu-viv recipe from meta-imx (it's not building)
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -29,9 +29,12 @@ KERNEL_DEVICETREE_FN = "imx8mm-phyboard-polis-rdk.dtb"
 # enable wifi + bt
 MACHINE_FIRMWARE:append = "lwb-etsi-firmware"
 
-
 # ethernet device name
 OMNECT_ETH0 = "eth0"
 
 # wlan device name
 OMNECT_WLAN0 = "wlan0"
+
+# mask meta-imx imx-gpu-viv recipe, it's not building,
+# we use the one from meta-freescale instead
+BBMASK:append = " meta-imx/meta-bsp/recipes-graphics/imx-gpu-viv/imx-gpu-viv_6.4.3.p4.4-aarch64.bb"
