--- a/recipes-core/systemd/systemd/omnect-first-boot.service
+++ b/recipes-core/systemd/systemd/omnect-first-boot.service
@@ -10,7 +10,12 @@ ConditionFirstBoot=yes
 # omnect_first_boot.sh implicitly starts services and might cause a deadlock while starting services.
 
 [Service]
-Type=oneshot
+# Type may not be "oneshot", this can result in a deadlock because the started
+# script has to return before other service, depending on it, can start.
+# Since the script itself (re)starts services via systemd this would result in
+# a deadlock.
+# (Seen when time-sync.target takes longer due to network problems.)
+Type=simple
 ExecStart=/usr/bin/omnect_first_boot.sh
 RemainAfterExit=true
 
