- systemd: enabled coredump handling distro-wide   (we currently use the default settings, which can be adapted or disabled in   /etc/systemd/coredump.conf) - docker: enabled bash-completion
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -12,6 +12,8 @@ INIT_MANAGER ?= "systemd"
 # Uids/gids created by systemd-sysusers could potentially clash with
 # uids/gids introduced by later update images.
 PACKAGECONFIG:remove:pn-systemd = "sysusers"
+# enable (configuring) coredump handling
+PACKAGECONFIG:append:pn-systemd = " coredump"
 
 JOURNALD_SystemMaxUse ?= "128M"
 
