--- a/conf/distro/omnect-os.conf
+++ b/conf/distro/omnect-os.conf
@@ -1,6 +1,7 @@
 include conf/machine/${MACHINE}.extra.conf
 require conf/distro/poky.conf
 require conf/distro/include/omnect-os-distro.conf
+require conf/distro/include/omnect-os-fixes.conf
 require conf/distro/include/omnect-os-preferred.conf
 require conf/distro/include/omnect-os-user_classes.conf
 require conf/distro/include/omnect-os-kernel.conf
