added AGPL-3.0-or-later and CLOSED licenses to INCOMPATIBLE_LICENSE

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -6,6 +6,11 @@ DISTROOVERRIDES = "poky:omnect-os"
 DISTRO_VERSION:append = ".${OMNECT_BUILD_NUMBER}"
 TARGET_VENDOR = "-omnect"
 
+# License settings
+INCOMPATIBLE_LICENSE = "AGPL-3.0-or-later CLOSED"
+#LICENSE_FLAGS_WHITELIST += " "
+#LICENSE_FLAGS_ACCEPTED = " "
+
 # Systemd
 INIT_MANAGER ?= "systemd"
 # disable sysusers
