--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -7,7 +7,7 @@ DISTRO_VERSION:append = ".${OMNECT_BUILD_NUMBER}"
 TARGET_VENDOR = "-omnect"
 
 # License settings
-INCOMPATIBLE_LICENSE = "AGPL-3.0-or-later CLOSED"
+INCOMPATIBLE_LICENSE = "AGPL-3.0-or-later CLOSED GPL-3.0-or-later"
 #LICENSE_FLAGS_WHITELIST += " "
 #LICENSE_FLAGS_ACCEPTED = " "
 
