--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -8,8 +8,8 @@ TARGET_VENDOR = "-omnect"
 
 # License settings
 INCOMPATIBLE_LICENSE = "AGPL-3.0-or-later CLOSED"
-#LICENSE_FLAGS_WHITELIST += " "
-#LICENSE_FLAGS_ACCEPTED = " "
+LICENSE_FLAGS_WHITELIST += " "
+LICENSE_FLAGS_ACCEPTED = " "
 
 # Systemd
 INIT_MANAGER ?= "systemd"
